@@ -295,6 +295,14 @@ It contains all files for that theme. The format of these files is described und
 the <i>Themes</i> section.
 <p>
 
+<LI><b><code>Title BGColor = &lt;color&gt;</code></b>
+<LI><b><code>Title Fontcolor = &lt;color&gt;</code></b>
+<br>
+Determines the font and background colors of the title bar. Colors are specified
+in the usual HTML format, like <i>white, black,</i> or <i>#808080</i> for hexadecimal
+RGB values. See here for <a href="http://www.w3schools.com/html/html_colors.asp">more
+examples</a>. The title colors are also used for the currently selected logbook tab.<p>
+
 <LI><b><code>Date format = &lt;string&gt;</code></b>
 <br>
 This option determines how the date of a logbook entry is displayed. The format
