@@ -12,14 +12,15 @@ Title image = elog.gif
 Title image URL = http://midas.psi.ch/elog
 
 ; Colors of logbook selection tabs
+; L:Logbook, G:Group, 1:Selected, 2:Others
 LTab1 BGColor = #486090
 LTab1 Fontcolor = #FFFFFF
 LTab2 BGColor = #E0E0E0
-LTab2 Fontcolor = #FFFFFF
+LTab2 Fontcolor = #606050
 GTab1 BGColor = #486090
 GTab1 Fontcolor	= #FFFFFF
-GTab2 BGColor = #FFFFB0
-GTab2 Fontcolor = #C0C0C0
+GTab2 BGColor = #D0E0C0
+GTab2 Fontcolor = #606050
 
 ; Look of Menus
 Merge menus = 1
